# Personal-Assistant

./: .env.sample  .gitignore  Procfile  README.md  STRUCTURE.md  docker-compose.yaml  dockerfile  env-example.txt  project_structure.txt  pyproject.toml  requirements.txt
Assistant_venv/: pyvenv.cfg
Assistant_venv/Scripts/: activate  activate.bat
contacts_app/: forms.py  models.py  views.py
contacts_app/migrations/: 0001_initial.py  0003_alter_contact_phone_number.py  0004_contact_unique_user_phone_number_and_more.py
files_app/: views.py
files_app/migrations/: 0001_initial.py
news_app/: views.py
notes_app/: views.py
notes_app/migrations/: 0001_initial.py
personal_assistant/: settings.py
personal_assistant/contacts_app/: admin.py  forms.py  models.py  urls.py  views.py
personal_assistant/files_app/: forms.py  models.py  urls.py  views.py
personal_assistant/news_app/: urls.py  views.py
personal_assistant/notes_app/: admin.py  forms.py  models.py  urls.py  views.py
personal_assistant/personal_assistant/: settings.py  urls.py  views.py
personal_assistant/static/: pagination.css
personal_assistant/templates/: base.html  home.html  homepage.html  news.html
personal_assistant/users_app/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
templates/: base.html
templates/contacts_app/: contact_home.html  contact_list.html
templates/files_app/: file_list.html
templates/notes_app/: edit_note.html  note_list.html
templates/users/: password_reset_done.html  profile.html
users_app/: forms.py  models.py  signals.py  views.py
users_app/migrations/: 0001_initial.py  0004_alter_profile_avatar.py
venv_Assistant/: pyvenv.cfg
venv_Assistant/Scripts/: activate  activate.bat
(+47 files in other folders)
