[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Yevgeniy Python <itpython2023@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "2.9.9"
django = "5.1.1"
mongoengine = "^0.29.0"
pymongo = "^4.8.0"
sqlalchemy = "^2.0.32"
pillow = "10.4.0"
django-environ = "0.11.2"
newsapi = "0.1.1"
asgiref = "3.8.1"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
cloudinary = "1.41.0"
django-cors-headers = "4.4.0"
django-crispy-forms = "2.3"
django-phonenumber-field = "8.0.0"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.3.1"
idna = "3.10"
imageio = "2.35.1"
imageio-ffmpeg = "0.5.1"
newsapi-python = "0.2.7"
numpy = "2.1.2"
phonenumbers = "8.13.47"
psutil = "6.0.0"
pyjwt = "2.9.0"
python-dateutil = "2.9.0.post0"
python-decouple = "3.8"
python-dotenv = "1.0.1"
requests = "2.32.3"
setuptools = "75.1.0"
six = "1.16.0"
sqlparse = "0.5.1"
tzdata = "2024.2"
urllib3 = "2.2.3"
gunicorn = "^23.0.0"
whitenoise = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
